[package]
name = "sudoku-solver"
version = "0.3.0" # remember to update html_root_url
authors = ["Christian Tamblyn <ctamblyn76@gmail.com>"]
edition = "2018"
description = "Simple backtracking algorithm for solving sudoku."
license = "MIT"
documentation = "https://docs.rs/sudoku-solver"
repository = "https://github.com/ctamblyn/sudoku-solver"
keywords = ["sudoku", "backtracking"]
categories = ["algorithms"]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "solver_benchmarks"
harness = false

[dependencies]
bit-iter = "1.0"
